Fri Jul 25 15:05:42 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/io.h (ruby_absolute_path_p): published.

	* io.c (rb_sysopen_prepare): fix for non-openat platforms.

Fri Jul 25 10:00:00 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/test_transcode.rb: refactoring/cleanup of
	  test_iso_2022_jp(_1)

Fri Jul 25 04:12:57 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf.c (rb_nkf_convert): output of mime encode is US-ASCII.
	  [ruby-list:45257]

Fri Jul 25 02:43:11 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* sample/coverage.rb: move from lib/coverage.rb because this remains in
	  an early phase of development.

Fri Jul 25 00:10:23 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_find_file_ext, rb_find_file): converts Windows style path
	  to Cygwin path.  [ruby-dev:35647]

Thu Jul 24 16:30:21 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (exit_handler): use st_free_table() to free socklist.

	* win32/win32.c (rb_w32_pipe_exec, rb_w32_accept, rb_w32_socket,
	  rb_w32_socketpair): should check and release fd and sockets/handles
	  if an error occurs in rb_w32_open_osfhandle().

Thu Jul 24 16:05:02 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (overlapped_socket_io): avoid warnings.

	* thread_win32.c (ubf_handle): refactoring.

Thu Jul 24 07:01:13 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32ole/win32ole.c: got rid of improper casts.

Wed Jul 23 23:19:15 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/socket/test_tcp.rb (test_recvfrom): replace an irrelevant test
	  for old behavior.

Wed Jul 23 21:38:16 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_marshal.rb: suppress warning during test.

Wed Jul 23 21:35:53 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_dir.rb: suppress warning during test.

Wed Jul 23 18:27:46 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/{stubs,tcltklib}.c, ext/tk/tkutil/tkutil.c: fix warnings
	  about constness and signedness.
