@@ -739,6 +739,35 @@ ruby_strdup(const char *str)
     return tmp;
 }
 
+char *
+ruby_sys_getcwd(void)
+{
+#ifdef HAVE_GETCWD
+    int size = 200;
+    char *buf = xmalloc(size);
+
+    while (!getcwd(buf, size)) {
+	if (errno != ERANGE) {
+	    xfree(buf);
+	    rb_sys_fail("getcwd");
+	}
+	size *= 2;
+	buf = xrealloc(buf, size);
+    }
+#else
+# ifndef PATH_MAX
+#  define PATH_MAX 8192
+# endif
+    char *buf = xmalloc(PATH_MAX+1);
+
+    if (!getwd(buf)) {
+	xfree(buf);
+	rb_sys_fail("getwd");
+    }
+#endif
+    return buf;
+}
+
 /****************************************************************
  *
  * The author of this software is David M. Gay.
